2006-04-27  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeWin32Classic.cs: Draw the ToolBar border lines only if
	  needed (clip). Otherwise we get artifacts.

2006-04-26  Peter Dennis Bartok  <pbartok@novell.com>

	* FixedSizeTextBox.cs: Added constructor to allow specifying which
	  dimension is fixed
	* UpDownBase.cs: Set the spinner control to be fixed height vertical,
	  and switched FixedSizeTextBox to only be fixed vertical (#78116)
	* Form.cs: Not applying the 'MS 0.08 fudge factor' for a given dimension
	  if it matches the scale base font (avoids unneeded scaling)

2006-04-26  Alexander Olk  <alex.olk@googlemail.com>

	* X11DesktopColors.cs: One gtk_init_check should be enough

2006-04-26  Peter Dennis Bartok  <pbartok@novell.com> 

	* TextBoxBase.cs: Moved Backspace handling into WM_CHAR block to
	  match MS behaviour

2006-04-26  Peter Dennis Bartok  <pbartok@novell.com>

	* TextBoxBase.cs: 
	  - Generate OnTextChanged for Backspace even if we're only deleting
	    the current selection
	  - When setting the Text property, only select all text if the
	    control does not have focus when it is being set. Otherwise
	    just place the cursor at the beginning of the control

2006-04-26  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeWin32Classic.cs: ToolBars get drawn with two lines at the top.
	  Added a little helper to draw PropertyGrid ToolBar with a different
	  border and a different BackColor.
	* PropertyGrid.cs: Some background parts didn't get painted with the
	  correct background color. Added a class that helps us to draw the
	  correct border for PropertyGridView and a class that helps us to
	  draw ToolBars with a different backcolor
	* PropertyGridView.cs: Draw PlusMinus with the correct colors.

2006-04-25  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* PropertyGrid.cs: Bug 78196, font size, and splitter location.
	* PropertyGridView.cs: Bug 78196, font size, and splitter location.
